--- a/Challenges/2Challenge/2challenge.ipynb
+++ b/Challenges/2Challenge/2challenge.ipynb
@@ -4,22 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Programming Challenge 2"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "# Programming Challenge 2\n",
+    "\n",
     "In this [Python](https://www.python.org) challenge, you will create a method called `biased_die_throw()` module to explore conditional probabilities.\n",
     "The bias is on face 6, whereas the other five faces are equally likely.\n",
-    "A sample method appears below."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "A sample method appears below.\n",
+    "\n",
     "## Part 1 – Biased Die"
    ]
   },
@@ -104,13 +94,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Part 2 – Two Competing Dice"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "## Part 2 – Two Competing Dice\n",
+    "\n",
     "Consider a scenario where two dice are rolled.\n",
     "One die is biased (with default `p6`) and the other die unbiased (`p6=1/6`).\n",
     "\n",
