--- a/Students/nahidgithubaccount/2Challenge/2challenge.ipynb
+++ b/Students/nahidgithubaccount/2Challenge/2challenge.ipynb
@@ -15,26 +15,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 165,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import random\n",
     "import math\n",
+    "import numpy as np\n",
     "from scipy.stats import bernoulli\n",
     "\n",
     "def biased_die_throw(prob6=0.25):\n",
     "    \"\"\"\n",
     "    This method returns a 6 with probability prob6, and it returns numbers from 1 to 5,\n",
     "    each with probability p = (1 - prob6)/5. The default value is prob6 = 1/4.\"\"\"\n",
-    "    if (bernoulli(prob6) = 1):\n",
+    "    if (bernoulli.rvs(prob6)==1):\n",
     "        out = 6\n",
     "    else:\n",
-    "        #\n",
-    "        #EDIT\n",
-    "        #\n",
+    "        out = np.random.randint(1,6) #EDIT         \n",
     "    return out"
    ]
   },
@@ -49,10 +46,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 166,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def expt1(p6=0.25):\n",
@@ -61,9 +56,9 @@
     "    It relies on the method biased_die_throw().\n",
     "    \"\"\"\n",
     "    num_Throws = 0\n",
-    "    while(): #EDIT\n",
+    "    while(biased_die_throw(p6)<6): #EDIT\n",
     "        num_Throws += 1 \n",
-    "    return num_Throws"
+    "    return num_Throws+1"
    ]
   },
   {
@@ -76,16 +71,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 187,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 6)\n",
+      "(2, 6)\n",
+      "(3, 6)\n",
+      "(4, 6)\n",
+      "(5, 6)\n",
+      "(6, 6)\n",
+      "(7, 6)\n",
+      "(8, 6)\n",
+      "(9, 6)\n",
+      "(10, 6)\n",
+      "(11, 6)\n",
+      "(12, 6)\n",
+      "(13, 6)\n",
+      "(14, 6)\n",
+      "(15, 6)\n",
+      "(16, 6)\n",
+      "(17, 6)\n",
+      "(18, 6)\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "\n",
     "# EDIT\n",
+    "def distribution_sim(prob=0.05,trials_num=10000,vec_length=6):\n",
+    "    empirical_dist = np.zeros(vec_length)\n",
+    "    trials = 0\n",
+    "    while trials<trials_num:\n",
+    "        num_throws = expt1(prob)\n",
+    "        if (num_throws<=6):\n",
+    "            empirical_dist[num_throws-1] += 1\n",
+    "            trials +=1\n",
+    "    empirical_dist = empirical_dist/trials_num\n",
+    "    return empirical_dist\n",
     "\n",
+    "trials_num=10000\n",
+    "vec_length=6\n",
+    "distributions = np.empty((0, vec_length))\n",
+    "interval = np.arange(0.05,0.95,0.05)  \n",
+    "for prob in interval:\n",
+    "    empirical_dist = distribution_sim(prob,trials_num,vec_length)\n",
+    "    distributions = np.append(distributions, [empirical_dist], axis=0)\n",
+    "    print(distributions.shape)\n",
+    "    \n",
     "# Write output file\n",
     "pd.DataFrame(distributions).to_csv(\"2challenge-1.csv\")"
    ]
@@ -105,10 +142,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 188,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def expt2(p6=0.25):\n",
@@ -117,11 +152,21 @@
     "    It relies on the method biased_die_throw().\n",
     "    \"\"\"\n",
     "    num_Throws = 0\n",
-    "    while ():#EDIT\n",
-    "        out1 = #EDIT\n",
-    "        out2 = #EDIT\n",
-    "        num_Throws += 1 \n",
-    "    return num_Throws,out1,out2"
+    "    Flag = 0\n",
+    "    while (Flag==0):#EDIT\n",
+    "        d1 = biased_die_throw(prob6=p6)\n",
+    "        d2 = np.random.randint(1,7)\n",
+    "        if (d1==6 or d2==6):\n",
+    "            Flag = 1\n",
+    "            if (d1<6):\n",
+    "                out = 0\n",
+    "            elif (d2<6):\n",
+    "                out = 1\n",
+    "            else:\n",
+    "                out = 2\n",
+    "        else:\n",
+    "            num_Throws += 1 \n",
+    "    return out"
    ]
   },
   {
@@ -134,14 +179,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 189,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 3)\n",
+      "(2, 3)\n",
+      "(3, 3)\n",
+      "(4, 3)\n",
+      "(5, 3)\n",
+      "(6, 3)\n",
+      "(7, 3)\n",
+      "(8, 3)\n",
+      "(9, 3)\n",
+      "(10, 3)\n",
+      "(11, 3)\n",
+      "(12, 3)\n",
+      "(13, 3)\n",
+      "(14, 3)\n",
+      "(15, 3)\n",
+      "(16, 3)\n",
+      "(17, 3)\n",
+      "(18, 3)\n"
+     ]
+    }
+   ],
    "source": [
     "# EDIT\n",
+    "import pandas as pd\n",
     "\n",
+    "# EDIT\n",
+    "def distribution_sim_2(p6=0.05,trials_num=10000,vec_length=3):\n",
+    "    empirical_dist = np.zeros(vec_length)\n",
+    "    trials = 0\n",
+    "    while trials<trials_num:\n",
+    "        out = expt2(p6)\n",
+    "        empirical_dist[out] += 1\n",
+    "        trials +=1\n",
+    "    empirical_dist = empirical_dist/trials_num\n",
+    "    return empirical_dist\n",
+    "\n",
+    "trials_num=10000\n",
+    "vec_length=3\n",
+    "distributions = np.empty((0, vec_length))\n",
+    "interval = np.arange(0.05,0.95,0.05)  \n",
+    "for p6 in interval:\n",
+    "    empirical_dist = distribution_sim_2(p6,trials_num,vec_length)\n",
+    "    distributions = np.append(distributions, [empirical_dist], axis=0)\n",
+    "    print(distributions.shape)\n",
+    "    \n",
     "# Write output file\n",
     "pd.DataFrame(distributions).to_csv(\"2challenge-2.csv\")"
    ]
@@ -163,7 +252,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
