--- a/Students/davidsmith6/2Challenge/2challenge.ipynb
+++ b/Students/davidsmith6/2Challenge/2challenge.ipynb
@@ -15,10 +15,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import random\n",
@@ -27,14 +25,14 @@
     "\n",
     "def biased_die_throw(prob6=0.25):\n",
     "    \"\"\"\n",
-    "    This method returns a 6 with probability prob6, and it returns numbers from 1 to 5,\n",
+    "    This method returns a 6 with probability prob6, and it returns numbersl from 1 to 5,\n",
     "    each with probability p = (1 - prob6)/5. The default value is prob6 = 1/4.\"\"\"\n",
-    "    if (bernoulli(prob6) = 1):\n",
+    "    if (bernoulli(prob6) == 1):\n",
     "        out = 6\n",
+    "\n",
     "    else:\n",
-    "        #\n",
-    "        #EDIT\n",
-    "        #\n",
+    "        out = (1-prob6)/5\n",
+    "        \n",
     "    return out"
    ]
   },
@@ -50,9 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def expt1(p6=0.25):\n",
@@ -61,7 +57,7 @@
     "    It relies on the method biased_die_throw().\n",
     "    \"\"\"\n",
     "    num_Throws = 0\n",
-    "    while(): #EDIT\n",
+    "    while(biased_die_throw() != 6): #EDIT\n",
     "        num_Throws += 1 \n",
     "    return num_Throws"
    ]
@@ -77,17 +73,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "\n",
-    "# EDIT\n",
-    "\n",
-    "# Write output file\n",
-    "pd.DataFrame(distributions).to_csv(\"2challenge-1.csv\")"
+    "p6 = 0.05\n",
+    "while (p6 <=.95):\n",
+    "    distrubutions = expt1(p6)\n",
+    "    p6 += .05    \n",
+    "    # EDIT\n",
+    "    # Write output file\n",
+    "    f = open(\"2challenge-1.csv\", \"a\")\n",
+    "    f.write(distributions)\n",
+    "    pd.DataFrame(distributions).to_csv(\"2challenge-1.csv\")\n",
+    "    "
    ]
   },
   {
@@ -106,9 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def expt2(p6=0.25):\n",
@@ -117,9 +114,9 @@
     "    It relies on the method biased_die_throw().\n",
     "    \"\"\"\n",
     "    num_Throws = 0\n",
-    "    while ():#EDIT\n",
-    "        out1 = #EDIT\n",
-    "        out2 = #EDIT\n",
+    "    while (biased_die_throw()==6):#EDIT\n",
+    "        out1 = 1  #EDIT\n",
+    "        out2 = 1  #EDIT\n",
     "        num_Throws += 1 \n",
     "    return num_Throws,out1,out2"
    ]
@@ -135,16 +132,40 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# EDIT\n",
-    "\n",
+    "p6 = 0.05\n",
+    "while (p6 <=.95):\n",
+    "    distrubutions = expt2(p6)\n",
+    "    p6 += .05    \n",
     "# Write output file\n",
-    "pd.DataFrame(distributions).to_csv(\"2challenge-2.csv\")"
+    "    f = open(\"2challenge-2.csv\", \"a\")\n",
+    "    f.write(distributions)\n",
+    "    pd.DataFrame(distributions).to_csv(\"2challenge-2.csv\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -163,7 +184,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
