--- a/Students/katherinebernhardt/2Challenge/2challenge.ipynb
+++ b/Students/katherinebernhardt/2Challenge/2challenge.ipynb
@@ -15,11 +15,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 235,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 235,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import random\n",
     "import math\n",
@@ -29,13 +38,14 @@
     "    \"\"\"\n",
     "    This method returns a 6 with probability prob6, and it returns numbers from 1 to 5,\n",
     "    each with probability p = (1 - prob6)/5. The default value is prob6 = 1/4.\"\"\"\n",
-    "    if (bernoulli(prob6) = 1):\n",
+    "    if (bernoulli.rvs(prob6) == 1):\n",
     "        out = 6\n",
     "    else:\n",
     "        #\n",
-    "        #EDIT\n",
+    "        out = random.randint(1,5)\n",
     "        #\n",
-    "    return out"
+    "    return out\n",
+    "biased_die_throw()"
    ]
   },
   {
@@ -49,21 +59,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 269,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 269,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def expt1(p6=0.25):\n",
     "    \"\"\"\n",
     "    This method returns a natural number that denotes the number of die throws needed to obtain a 6. \n",
     "    It relies on the method biased_die_throw().\n",
     "    \"\"\"\n",
-    "    num_Throws = 0\n",
-    "    while(): #EDIT\n",
+    "    num_Throws = 1\n",
+    "    while(biased_die_throw(p6)!=6): #EDIT\n",
     "        num_Throws += 1 \n",
-    "    return num_Throws"
+    "    return num_Throws\n",
+    "expt1()"
    ]
   },
   {
@@ -76,15 +96,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 424,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import numpy as np\n",
     "\n",
     "# EDIT\n",
+    "distributions = []\n",
+    "for p6 in np.arange (0.05,0.95,0.05):\n",
+    "    row = [0,0,0,0,0,0]\n",
+    "    for x in range (0,6): \n",
+    "        row[x] = expt1(p6)\n",
+    "    distributions.append(row)\n",
     "\n",
     "# Write output file\n",
     "pd.DataFrame(distributions).to_csv(\"2challenge-1.csv\")"
@@ -105,11 +130,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 420,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 2)"
+      ]
+     },
+     "execution_count": 420,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def expt2(p6=0.25):\n",
     "    \"\"\"\n",
@@ -117,11 +151,21 @@
     "    It relies on the method biased_die_throw().\n",
     "    \"\"\"\n",
     "    num_Throws = 0\n",
-    "    while ():#EDIT\n",
-    "        out1 = #EDIT\n",
-    "        out2 = #EDIT\n",
-    "        num_Throws += 1 \n",
-    "    return num_Throws,out1,out2"
+    "    biased_die = 0 \n",
+    "    unbiased_die = 0\n",
+    "    while (biased_die != 6 and unbiased_die != 6):#EDIT\n",
+    "        biased_die = biased_die_throw(p6) #rolling die\n",
+    "        unbiased_die = biased_die_throw(1/6) #rolling die\n",
+    "        num_Throws += 1 #adding row\n",
+    "        \n",
+    "    if (biased_die == 6 and unbiased_die != 6):\n",
+    "        out = 0\n",
+    "    elif (biased_die != 6 and unbiased_die == 6):\n",
+    "        out = 1\n",
+    "    else: \n",
+    "        out = 2\n",
+    "    return num_Throws,out\n",
+    "expt2()"
    ]
   },
   {
@@ -134,13 +178,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 425,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# EDIT\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "# EDIT\n",
+    "distributions = []\n",
+    "for p6 in np.arange (0.05,0.95,0.05):\n",
+    "    row = [0,0,0]\n",
+    "    for x in range (0,3): \n",
+    "        row[x] = expt2(p6)\n",
+    "    distributions.append(row)\n",
     "\n",
     "# Write output file\n",
     "pd.DataFrame(distributions).to_csv(\"2challenge-2.csv\")"
@@ -163,7 +215,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
