--- a/Students/davidsmith6/2Challenge/2challenge.ipynb
+++ b/Students/davidsmith6/2Challenge/2challenge.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,11 +27,11 @@
     "    \"\"\"\n",
     "    This method returns a 6 with probability prob6, and it returns numbersl from 1 to 5,\n",
     "    each with probability p = (1 - prob6)/5. The default value is prob6 = 1/4.\"\"\"\n",
-    "    if (bernoulli(prob6) == 1):\n",
+    "    if (bernoulli.rvs(prob6) == 1):\n",
     "        out = 6\n",
     "\n",
     "    else:\n",
-    "        out = (1-prob6)/5\n",
+    "        out = random.randint(1,5)\n",
     "        \n",
     "    return out"
    ]
@@ -57,9 +57,9 @@
     "    It relies on the method biased_die_throw().\n",
     "    \"\"\"\n",
     "    num_Throws = 0\n",
-    "    while(biased_die_throw() != 6): #EDIT\n",
-    "        num_Throws += 1 \n",
-    "    return num_Throws"
+    "    while(biased_die_throw(p6) <= 6): #EDIT\n",
+    "        num_Throws = 1 + num_Throws\n",
+    "    return num_Throws\n"
    ]
   },
   {
@@ -77,15 +77,18 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import array\n",
+    "import numpy as np\n",
+    "distributions = []\n",
     "p6 = 0.05\n",
+    "f = open(\"2challenge-1.csv\", \"a\")\n",
     "while (p6 <=.95):\n",
-    "    distrubutions = expt1(p6)\n",
+    "    values = expt1()\n",
+    "    distributions.append(values)\n",
     "    p6 += .05    \n",
     "    # EDIT\n",
-    "    # Write output file\n",
-    "    f = open(\"2challenge-1.csv\", \"a\")\n",
-    "    f.write(distributions)\n",
-    "    pd.DataFrame(distributions).to_csv(\"2challenge-1.csv\")\n",
+    "    # Write output file    \n",
+    "pd.DataFrame(distributions).to_csv(\"2challenge-1.csv\")\n",
     "    "
    ]
   },
@@ -113,8 +116,10 @@
     "    This method returns a natural number that denotes the number of die throws needed to obtain a 6. \n",
     "    It relies on the method biased_die_throw().\n",
     "    \"\"\"\n",
+    "    out1=0\n",
+    "    out2=0\n",
     "    num_Throws = 0\n",
-    "    while (biased_die_throw()==6):#EDIT\n",
+    "    while (biased_die_throw()<6):#EDIT\n",
     "        out1 = 1  #EDIT\n",
     "        out2 = 1  #EDIT\n",
     "        num_Throws += 1 \n",
@@ -137,13 +142,14 @@
    "source": [
     "# EDIT\n",
     "p6 = 0.05\n",
+    "distributions = []\n",
+    "f = open(\"2challenge-2.csv\", \"a\")\n",
     "while (p6 <=.95):\n",
-    "    distrubutions = expt2(p6)\n",
+    "    values2 = expt2()\n",
+    "    distributions.append(values2)\n",
     "    p6 += .05    \n",
     "# Write output file\n",
-    "    f = open(\"2challenge-2.csv\", \"a\")\n",
-    "    f.write(distributions)\n",
-    "    pd.DataFrame(distributions).to_csv(\"2challenge-2.csv\")"
+    "pd.DataFrame(distributions).to_csv(\"2challenge-2.csv\")"
    ]
   },
   {
