--- a/Students/marcia-benavides/2Challenge/2challenge.ipynb
+++ b/Students/marcia-benavides/2Challenge/2challenge.ipynb
@@ -32,7 +32,8 @@
     "    if (bernoulli(prob6) = 1):\n",
     "        out = 6\n",
     "    else:\n",
-    "        #\n",
+    "         p = (1-prob6)/5 
+    "        out = p,
     "        #EDIT\n",
     "        #\n",
     "    return out"
@@ -61,7 +62,7 @@
     "    It relies on the method biased_die_throw().\n",
     "    \"\"\"\n",
     "    num_Throws = 0\n",
-    "    while(): #EDIT\n",
+    "    while(!biased_die_throw(6)): \n",
     "        num_Throws += 1 \n",
     "    return num_Throws"
    ]
