--- a/Challenges/3Challenge/3challenge.ipynb
+++ b/Challenges/3Challenge/3challenge.ipynb
@@ -16,14 +16,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1 0 1 0 0 1 0 0 1 0]\n"
+      "[0 0 0 1 0 1 1 1 0 0]\n"
      ]
     }
    ],
@@ -40,10 +40,8 @@
     "    for i in range(x):\n",
     "        if (bernoulli.rvs(blue/(red+blue)) == 1):\n",
     "            blue = blue - 1\n",
-    "            out[i]=0\n",
     "        else:\n",
-    "            red = red -1\n",
-    "            out[i]=1\n",
+    "            # Edit\n",
     "    return out\n",
     "y = marble_pick_up(10)\n",
     "print(y)"
@@ -58,50 +56,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(0, 1)\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'numpy.ndarray' object has no attribute 'append'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-62-7a1091a95f7c>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     19\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mred\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mblue\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     20\u001b[0m     \u001b[0mempirical_dist\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdistributions_sim1\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 21\u001b[1;33m     \u001b[0mdistributions1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mempirical_dist\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     22\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdistributions1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     23\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'numpy.ndarray' object has no attribute 'append'"
+      "(0, 2)\n",
+      "(10, 2)\n"
      ]
     }
    ],
    "source": [
     "import pandas as pd\n",
-    "red = 4;\n",
-    "blue = 6;\n",
     "def distributions_sim1(x):\n",
-    "    trial_num = 10000\n",
+    "    trial_num = 100\n",
     "    empirical_dist = np.zeros(2)\n",
-    "    empirical_dist[0]=x\n",
-    "    running_total = 0\n",
     "    for trial in range(0, trial_num):\n",
-    "        result = marble_pick_up(x)\n",
-    "        running_total= result[x-1]\n",
-    "    empirical_dist[1]=running_total/10000\n",
+    "        #Edit\n",
     "    return empirical_dist\n",
     "\n",
     "# Create an empty horizontal vector\n",
-    "distributions1 = np.empty((0,1))\n",
+    "distributions1 = np.empty((0,2))\n",
     "print(distributions1.shape)\n",
     "\n",
     "for x in range(red+blue+1):\n",
     "    empirical_dist = distributions_sim1(x+1)\n",
-    "    distributions1.append(empirical_dist[0])\n",
+    "    # Add rows to horizontal vector\n",
+    "    #Edit\n",
     "print(distributions1.shape)\n",
     "\n",
     "# Write output file\n",
@@ -153,7 +136,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
