--- a/Students/nahidgithubaccount/3Challenge/3challenge.ipynb
+++ b/Students/nahidgithubaccount/3Challenge/3challenge.ipynb
@@ -11,19 +11,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A jar contains 6 marbles blue and 4 red marbles. A total of `x` marbles are drawn from this jar without replacement. Create a method `marble_pick_up()` that returns as an array the color sequence of the selected marbles. For convenience, let 0 denote blue and 1 denote red."
+    "A jar contains 6 blue marbles and 4 red marbles. A total of `x` marbles are drawn from this jar without replacement. Create a method `marble_pick_up()` that returns as an array the color sequence of the selected marbles. For convenience, let 0 denote blue and 1 denote red."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0 0 0 1 0 1 1 1 0 0]\n"
+      "[1 1 0 0 1 0 0 1 0 0]\n",
+      "0\n"
      ]
     }
    ],
@@ -39,12 +40,19 @@
     "    out = np.zeros(x,int)\n",
     "    for i in range(x):\n",
     "        if (bernoulli.rvs(blue/(red+blue)) == 1):\n",
-    "            blue = blue - 1\n",
+    "            blue = blue - 1;\n",
+    "            if (blue < 0):\n",
+    "                blue = 0;\n",
     "        else:\n",
-    "            # Edit\n",
+    "            out[i] = 1;\n",
+    "            red = red - 1;\n",
+    "            if (red < 0):\n",
+    "                red = 0;\n",
     "    return out\n",
+    "\n",
     "y = marble_pick_up(10)\n",
-    "print(y)"
+    "print(y)\n",
+    "print(y[9])"
    ]
   },
   {
@@ -56,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -70,25 +78,26 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "def distributions_sim1(x):\n",
-    "    trial_num = 100\n",
-    "    empirical_dist = np.zeros(2)\n",
+    "def distributions_sim(x):\n",
+    "    trial_num = 10000;\n",
+    "    empirical_dist = np.zeros(2);\n",
     "    for trial in range(0, trial_num):\n",
-    "        #Edit\n",
+    "        y = marble_pick_up(x);\n",
+    "        empirical_dist[y[x-1]] += 1;\n",
+    "    empirical_dist = empirical_dist/trial_num;    \n",
     "    return empirical_dist\n",
     "\n",
-    "# Create an empty horizontal vector\n",
-    "distributions1 = np.empty((0,2))\n",
-    "print(distributions1.shape)\n",
+    "distributions = np.empty((0,2));\n",
+    "print(distributions.shape)\n",
     "\n",
-    "for x in range(red+blue+1):\n",
-    "    empirical_dist = distributions_sim1(x+1)\n",
-    "    # Add rows to horizontal vector\n",
-    "    #Edit\n",
-    "print(distributions1.shape)\n",
+    "red = 4;\n",
+    "blue = 6;\n",
+    "for x in range(1,red+blue+1):\n",
+    "    empirical_dist = distributions_sim(x);\n",
+    "    distributions = np.append(distributions, [empirical_dist], axis=0);\n",
+    "print(distributions.shape)\n",
     "\n",
-    "# Write output file\n",
-    "pd.DataFrame(distributions1).to_csv(\"3challenge-1.csv\")"
+    "pd.DataFrame(distributions).to_csv(\"3challenge-1.csv\")"
    ]
   },
   {
@@ -100,24 +109,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(0, 6)\n",
-      "(7, 6)\n"
+      "(0, 2)\n",
+      "(7, 2)\n"
      ]
     }
    ],
    "source": [
-    "#Edit\n",
-    "# Write output file\n",
-    "pd.DataFrame(distributions2).to_csv(\"3challenge-2.csv\")\n",
+    "import pandas as pd\n",
+    "def cond_distributions_sim(x):\n",
+    "    trial_num = 10000;\n",
+    "    empirical_cond_dist = np.zeros(2);\n",
+    "    trials = 0;\n",
+    "    while trials<trial_num:\n",
+    "        y = marble_pick_up(x);\n",
+    "        z = y[x-4:x-1];\n",
+    "        if (sum(z)>0):\n",
+    "            empirical_cond_dist[y[x-1]] += 1;\n",
+    "            trials += 1;\n",
+    "    empirical_cond_dist = empirical_cond_dist/trial_num;    \n",
+    "    return empirical_cond_dist\n",
+    "\n",
+    "cond_distributions = np.empty((0,2));\n",
+    "print(cond_distributions.shape)\n",
+    "\n",
+    "red = 4;\n",
+    "blue = 6;\n",
+    "for x in range(4,red+blue+1):\n",
+    "    empirical_cond_dist = cond_distributions_sim(x);\n",
+    "    cond_distributions = np.append(cond_distributions, [empirical_cond_dist], axis=0);\n",
+    "print(cond_distributions.shape)\n",
+    "\n",
+    "pd.DataFrame(cond_distributions).to_csv(\"3challenge-2.csv\")\n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -136,7 +174,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
