--- a/Challenges/3Challenge/3challenge.ipynb
+++ b/Challenges/3Challenge/3challenge.ipynb
@@ -16,14 +16,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0 0 0 1 0 1 1 1 0 0]\n"
+      "[0 0 0 0 0 0 0 0 0 0]\n"
      ]
     }
    ],
@@ -42,6 +42,7 @@
     "            blue = blue - 1\n",
     "        else:\n",
     "            # Edit\n",
+    "            red = red -1\n",
     "    return out\n",
     "y = marble_pick_up(10)\n",
     "print(y)"
@@ -56,15 +57,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(0, 2)\n",
-      "(10, 2)\n"
+      "(0, 2)\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'red' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mcell_name\u001b[0m in \u001b[0;36masync-def-wrapper\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'red' is not defined"
      ]
     }
    ],
@@ -74,6 +85,9 @@
     "    trial_num = 100\n",
     "    empirical_dist = np.zeros(2)\n",
     "    for trial in range(0, trial_num):\n",
+    "        trail_num = trail_num + .01\n",
+    "        emperical_dist = marble_pick_up()\n",
+    "            \n",
     "        #Edit\n",
     "    return empirical_dist\n",
     "\n",
@@ -84,6 +98,11 @@
     "for x in range(red+blue+1):\n",
     "    empirical_dist = distributions_sim1(x+1)\n",
     "    # Add rows to horizontal vector\n",
+    "    for y in range (empirical_dist):\n",
+    "        empirical_dist = empirical_dist(x,y)\n",
+    "        return distributions1\n",
+    "    return empirical_dist\n",
+    "\n",
     "    #Edit\n",
     "print(distributions1.shape)\n",
     "\n",
@@ -136,7 +155,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
