--- a/Students/davidsmith6/3Challenge/3challenge.ipynb
+++ b/Students/davidsmith6/3Challenge/3challenge.ipynb
@@ -41,7 +41,7 @@
     "        if (bernoulli.rvs(blue/(red+blue)) == 1):\n",
     "            blue = blue - 1\n",
     "        else:\n",
-    "            # Edit\n",
+    "            red = red -1\n",
     "    return out\n",
     "y = marble_pick_up(10)\n",
     "print(y)"
@@ -56,15 +56,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(0, 2)\n",
-      "(10, 2)\n"
+     "ename": "IndentationError",
+     "evalue": "expected an indented block (<ipython-input-3-d62b0de29d45>, line 7)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-3-d62b0de29d45>\"\u001b[1;36m, line \u001b[1;32m7\u001b[0m\n\u001b[1;33m    return empirical_dist\u001b[0m\n\u001b[1;37m         ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m expected an indented block\n"
      ]
     }
    ],
@@ -83,6 +83,8 @@
     "\n",
     "for x in range(red+blue+1):\n",
     "    empirical_dist = distributions_sim1(x+1)\n",
+    "    distributions1 = distributions1[x,empirical_dist]\n",
+    "    return distributions1\n",
     "    # Add rows to horizontal vector\n",
     "    #Edit\n",
     "print(distributions1.shape)\n",
@@ -136,7 +138,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
