--- a/Students/javierisma98/3Challenge/3challenge.ipynb
+++ b/Students/javierisma98/3Challenge/3challenge.ipynb
@@ -16,14 +16,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0 0 0 1 0 1 1 1 0 0]\n"
+      "[1 1 0 1 0 1 0 0 0 0]\n"
      ]
     }
    ],
@@ -33,15 +33,17 @@
     "import numpy as np\n",
     "from scipy.stats import bernoulli\n",
     "\n",
-    "def marble_pick_up(x=3):\n",
+    "def marble_pick_up(x):\n",
     "    red = 4;\n",
     "    blue = 6;\n",
     "    out = np.zeros(x,int)\n",
     "    for i in range(x):\n",
     "        if (bernoulli.rvs(blue/(red+blue)) == 1):\n",
     "            blue = blue - 1\n",
+    "            out[i] = 0\n",
     "        else:\n",
-    "            # Edit\n",
+    "            red = red - 1\n",
+    "            out[i] = 1\n",
     "    return out\n",
     "y = marble_pick_up(10)\n",
     "print(y)"
@@ -56,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -71,20 +73,24 @@
    "source": [
     "import pandas as pd\n",
     "def distributions_sim1(x):\n",
-    "    trial_num = 100\n",
+    "    trial_num = 10000\n",
     "    empirical_dist = np.zeros(2)\n",
     "    for trial in range(0, trial_num):\n",
-    "        #Edit\n",
+    "        y = marble_pick_up(x);\n",
+    "        empirical_dist[y[x-1]] += 1;\n",
+    "    empirical_dist = empirical_dist / trial_num\n",
     "    return empirical_dist\n",
     "\n",
     "# Create an empty horizontal vector\n",
     "distributions1 = np.empty((0,2))\n",
     "print(distributions1.shape)\n",
     "\n",
-    "for x in range(red+blue+1):\n",
-    "    empirical_dist = distributions_sim1(x+1)\n",
-    "    # Add rows to horizontal vector\n",
-    "    #Edit\n",
+    "red = 4;\n",
+    "blue = 6;\n",
+    "\n",
+    "for x in range(1, red+blue+1):\n",
+    "    empirical_dist = distributions_sim1(x)\n",
+    "    distributions1 = np.append(distributions1, [empirical_dist], axis=0)\n",
     "print(distributions1.shape)\n",
     "\n",
     "# Write output file\n",
@@ -100,24 +106,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(0, 6)\n",
-      "(7, 6)\n"
+      "(7, 2)\n"
      ]
     }
    ],
    "source": [
-    "#Edit\n",
+    "def conditional_distributions_sim(x):\n",
+    "    trial_num = 10000\n",
+    "    cond_empirical_dist = np.zeros(2)\n",
+    "    trials = 0;\n",
+    "    while (trials < trial_num):\n",
+    "        y = marble_pick_up(x);\n",
+    "        last3 = y[x-4:x-2];\n",
+    "        if (sum(last3) > 0):\n",
+    "            cond_empirical_dist[y[x-1]] += 1;\n",
+    "            trials += 1;\n",
+    "    cond_empirical_dist = cond_empirical_dist/trial_num;\n",
+    "    return cond_empirical_dist\n",
+    "\n",
+    "distributions2 = np.empty((0,2))\n",
+    "\n",
+    "red = 4;\n",
+    "blue = 6;\n",
+    "\n",
+    "for x in range(4, red+blue+1):\n",
+    "    cond_empirical_dist = conditional_distributions_sim(x)\n",
+    "    distributions2 = np.append(distributions2, [cond_empirical_dist], axis=0)\n",
+    "print(distributions2.shape)\n",
+    "\n",
     "# Write output file\n",
     "pd.DataFrame(distributions2).to_csv(\"3challenge-2.csv\")\n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -136,7 +170,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
