--- a/Students/marcia-benavides/3Challenge/3challenge.ipynb
+++ b/Students/marcia-benavides/3Challenge/3challenge.ipynb
@@ -40,8 +40,13 @@
     "    for i in range(x):\n",
     "        if (bernoulli.rvs(blue/(red+blue)) == 1):\n",
     "            blue = blue - 1\n",
+    "            if (blue < 0);
+    "               blue = 0;
     "        else:\n",
-    "            # Edit\n",
+    "            out[i[ = 1;
+    "            red = red -1;
+    "            if (red < 0);
+    "                red = 0;
     "    return out\n",
     "y = marble_pick_up(10)\n",
     "print(y)"
@@ -74,7 +79,9 @@
     "    trial_num = 100\n",
     "    empirical_dist = np.zeros(2)\n",
     "    for trial in range(0, trial_num):\n",
-    "        #Edit\n",
+    "        y= marble(x); 
+    "        empirical_dist[y(x+1)] += 1;
+    "        empirical_dist= = empirical_dist/trial_num;
     "    return empirical_dist\n",
     "\n",
     "# Create an empty horizontal vector\n",
@@ -83,8 +90,8 @@
     "\n",
     "for x in range(red+blue+1):\n",
     "    empirical_dist = distributions_sim1(x+1)\n",
-    "    # Add rows to horizontal vector\n",
-    "    #Edit\n",
+    "    dist = np.append(dist, [empirical_dist], axis = 0);
+    "    
     "print(distributions1.shape)\n",
     "\n",
     "# Write output file\n",
