--- a/Students/nishat722/3Challenge/Challenge3 (2).ipynb
+++ b/Students/nishat722/3Challenge/Challenge3 (2).ipynb
@@ -58,7 +58,7 @@
     "        outcome = marble_pick_up(x);\n",
     "        \n",
     "        empirical_dist[outcome] += 1;\n",
-    "        ##empirical_dist = empirical_dist/trial_num\n",
+    "        empirical_dist = empirical_dist/2\n",
     "    return empirical_dist\n",
     "\n",
     "distributions = np.empty((0,2));\n",
@@ -102,7 +102,7 @@
     "    for trial in range(0, trial_num2):\n",
     "        outcome2 = marble_pick_up(x);\n",
     "        empirical_dist2[outcome2[x-3]] += 1;\n",
-    "        ##empirical_dist2 = empirical_dist2/ trial_num2\n",
+    "        empirical_dist2 = empirical_dist2/2\n",
     "    return empirical_dist2\n",
     "        \n",
     "        \n",
