--- a/Students/jklepser/4Challenge/4challenge.ipynb
+++ b/Students/jklepser/4Challenge/4challenge.ipynb
@@ -66,9 +66,9 @@
    },
    "outputs": [],
    "source": [
-    "TrainingData0 = df0.values\n",
-    "TrainingData1 = df1.values\n",
-    "TestData = dftest.values"
+    "TrainingData0 = df0.values\n #(Y0, Y1) COORDS LABELED 0",
+    "TrainingData1 = df1.values\n #(Y0, Y1) COORDS LABELED 1",
+    "TestData = dftest.values #THE UNLABLED (Y0, Y1) COORDS"
    ]
   },
   {
@@ -115,8 +115,8 @@
    "source": [
     "def  estimate(X):  #X is trainng data \n",
     "    #Note Training Data has a Column named Label which should not be considered for Mean and Covariance Calculations\n",
-    "    Mean = #Edit\n",
-    "    Covar = #Edit\n",
+    "    Mean = (X.mean(axis=0)+X.mean(axis=1))/2 #Edit\n",
+    "    Covar = pd.Series(X[:,0]).cov(pd.Series(X[:,1])) #Edit\n",
     "    return Mean, Covar"
    ]
   },
@@ -130,13 +130,13 @@
    "source": [
     "from scipy.stats import multivariate_normal as mvnorm\n",
     "def detect(X,M0,V0,M1,V1,threshold):\n",
-    "    L0 = mvnorm.pdf()#EDIT\n",
-    "    L1 = mvnorm.pdf()#EDIT\n",
+    "    L0 = mvnorm.pdf(X, mean=M0, cov=M0)#EDIT\n",
+    "    L1 = mvnorm.pdf(X, mean=M1, cov=V1)#EDIT\n",
     "    ratio = L0/L1\n",
-    "    if :  #EDIT\n",
-    "        d = #EDIT\n",
+    "    if : ratio >= threshold #EDIT\n",
+    "        d = 0 #EDIT\n",
     "    else:\n",
-    "        d = #EDIT\n",
+    "        d = 1 #EDIT\n",
     "    return d\n"
    ]
   },
@@ -155,8 +155,8 @@
    },
    "outputs": [],
    "source": [
-    "M0,V0 = estimate()#EDIT\n",
-    "M1,V1 = estimate()#EDIT\n",
+    "M0,V0 = estimate(TrainingData0)#EDIT\n",
+    "M1,V1 = estimate(TrainingData1)#EDIT\n",
     "threshold = 1\n",
     "if TestData.size != 0:\n",
     "    decision = np.zeros((int(TestData.shape[0]),1))\n",
