--- a/Students/jklepser/4Challenge/4challenge.ipynb
+++ b/Students/jklepser/4Challenge/4challenge.ipynb
@@ -155,13 +155,13 @@
    },
    "outputs": [],
    "source": [
-    "M0,V0 = estimate(TrainingData0)#EDIT\n",
-    "M1,V1 = estimate(TrainingData1)#EDIT\n",
+    "M0,V0 = estimate(TrainingData0) #EDIT\n",
+    "M1,V1 = estimate(TrainingData1) #EDIT\n",
     "threshold = 1\n",
     "if TestData.size != 0:\n",
     "    decision = np.zeros((int(TestData.shape[0]),1))\n",
     "    for X in TestData: #Note Test Data has a Column named Label which should not be considered for detection \n",
-    "        #EDIT \n",
+    "       decision[X] = detect(TestData[X],M0,V0,M1,V1,threshold); #EDIT \n",
     "       \n",
     "    TestData1 = np.hstack((TestData[:,0:2],decision))\n",
     "    dftest2 = pd.DataFrame(TestData1,columns=['Y0', 'Y1','label'])\n",
