--- a/Students/marcia-benavides/3Challenge/3challenge.ipynb
+++ b/Students/marcia-benavides/3Challenge/3challenge.ipynb
@@ -40,16 +40,18 @@
     "    for i in range(x):\n",
     "        if (bernoulli.rvs(blue/(red+blue)) == 1):\n",
     "            blue = blue - 1\n",
-    "            if (blue < 0);
-    "               blue = 0;
+    "            if (blue < 0); \n",
+    "               blue = 0; \n" ,
     "        else:\n",
-    "            out[i[ = 1;
+    "            out[i] = 1; \n",
     "            red = red -1;
-    "            if (red < 0);
-    "                red = 0;
+    "            if (red < 0); \n" ,
+    "                red = 0; \n" ,
     "    return out\n",
+    "\n"
     "y = marble_pick_up(10)\n",
-    "print(y)"
+    "print(y)\n" ,
+    "print(y[9])"
    ]
   },
   {
@@ -79,23 +81,24 @@
     "    trial_num = 100\n",
     "    empirical_dist = np.zeros(2)\n",
     "    for trial in range(0, trial_num):\n",
-    "        y= marble(x); 
-    "        empirical_dist[y(x+1)] += 1;
-    "        empirical_dist= = empirical_dist/trial_num;
+    "        y = marble_pick_up(x);\n",
+    "        empirical_dist[y[x-1]] += 1;\n",
+    "    empirical_dist = empirical_dist/trial_num;    \n",
     "    return empirical_dist\n",
     "\n",
-    "# Create an empty horizontal vector\n",
-    "distributions1 = np.empty((0,2))\n",
-    "print(distributions1.shape)\n",
+    "distributions = np.empty((0,2));\n",
+    "print(distributions.shape)\n",
     "\n",
-    "for x in range(red+blue+1):\n",
-    "    empirical_dist = distributions_sim1(x+1)\n",
-    "    dist = np.append(dist, [empirical_dist], axis = 0);
+    "red = 4;\n",
+    "blue = 6;\n",
+    "for x in range(1,red+blue+1):\n",
+    "    empirical_dist = distributions_sim(x);\n",
+    "    distributions = np.append(distributions, [empirical_dist], axis=0);\n",
     "    
     "print(distributions1.shape)\n",
     "\n",
     "# Write output file\n",
-    "pd.DataFrame(distributions1).to_csv(\"3challenge-1.csv\")"
+    "pd.DataFrame(distributions).to_csv(\"3challenge-1.csv\")"
    ]
   },
   {
@@ -122,11 +125,43 @@
    "source": [
     "#Edit\n",
     "# Write output file\n",
-    "pd.DataFrame(distributions2).to_csv(\"3challenge-2.csv\")\n",
+    
+      "import pandas as pd\n",
+    
+    "def cond_distributions_sim(x):\n",
+    "    trial_num = 10000;\n",
+    "    empirical_cond_dist = np.zeros(2);\n",
+    "    trials = 0;\n",
+    
+    "    while trials<trial_num:\n",
+    "        y = marble_pick_up(x);\n",
+    "        z = y[x-4:x-1];\n",
+    "        if (sum(z)>0):\n",
+    "            empirical_cond_dist[y[x-1]] += 1;\n",
+    "            trials += 1;\n",
+    
+    "    empirical_cond_dist = empirical_cond_dist/trial_num;    \n",
+    "    return empirical_cond_dist\n",
+    "\n",
+    "cond_distributions = np.empty((0,2));\n",
+    "print(cond_distributions.shape)\n",
+    "\n",
+    
+    "red = 4;\n",
+    "blue = 6;\n",
+    
+    "for x in range(4,red+blue+1):\n",
+    "    empirical_cond_dist = cond_distributions_sim(x);\n",
+    "    cond_distributions = np.append(cond_distributions, [empirical_cond_dist], axis=0);\n",
+    "print(cond_distributions.shape)\n",
+    "\n",
+    
+    "pd.DataFrame(cond_distributions).to_csv(\"3challenge-2.csv\")\n",
     "    "
    ]
   }
  ],
+ 
  "metadata": {
   "kernelspec": {
    "display_name": "Python 3",
